--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Mentoring program",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
     "build": "tsc",
-    "serve": "node ./dist/index.js",
-    "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix"
+    "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix",
+    "task1": "nodemon src/task1.ts",
+    "task2": "nodemon src/task2.ts",
+    "task2:debug": "nodemon --inspect-brk src/task2.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/sixtyXi/node-basic#readme",
   "devDependencies": {
+    "@types/node": "^12.0.8",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "eslint": "^5.3.0",
@@ -31,5 +33,8 @@
     "prettier": "^1.18.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.8"
   }
 }
