Create task2 config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,13 @@
     "node": true,
     "es6": true
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".ts"]
+      }
+    }
+  },
   "parser": "@typescript-eslint/parser",
   "extends": [
     "airbnb-base",
