--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/node": "^12.0.8",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "eslint": "^5.3.0",
@@ -37,6 +38,7 @@
   },
   "dependencies": {
     "csvtojson": "^2.0.8",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^3.3.2"
   }
 }
