Add docker-compose, sequilize, postgres

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prod": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "dev:debug": "nodemon --inspect-brk src/app.ts",
-    "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix"
+    "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix",
+    "up": "docker-compose up",
+    "down": "docker-compose down"
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,9 @@
   "dependencies": {
     "csvtojson": "^2.0.8",
     "express": "^4.17.1",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.10.1",
     "uuid": "^3.3.2"
   }
 }
