--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "src/app.ts",
   "scripts": {
     "build": "tsc",
-    "prod": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "dev:debug": "nodemon --inspect-brk src/app.ts",
+    "prod": "node -r dotenv/config dist/app.js",
+    "serve": "run-s build up prod",
+    "start": "run-s \"up\" \"dev\"",
+    "dev": "nodemon -r dotenv/config src/app.ts",
+    "dev:debug": "nodemon -r dotenv/config --inspect-brk src/app.ts",
     "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix",
     "up": "docker-compose up",
     "down": "docker-compose down"
@@ -23,9 +25,12 @@
   },
   "homepage": "https://github.com/sixtyXi/node-basic#readme",
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/node": "^12.0.8",
     "@types/uuid": "^3.4.5",
+    "@types/validator": "^10.11.1",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
     "@typescript-eslint/parser": "^1.10.2",
     "eslint": "^5.3.0",
@@ -40,6 +45,7 @@
   },
   "dependencies": {
     "csvtojson": "^2.0.8",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
