--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "csvtojson": "^2.0.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "inversify": "^5.0.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.10.1",
     "uuid": "^3.3.2"
   }
