--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -239,7 +239,8 @@
         "after": true
       }
     ],
-    "semi": [2, "always"],
+    "semi": "off",
+    "@typescript-eslint/semi": ["error"],
     "keyword-spacing": 2,
     "space-before-blocks": 2,
     "space-before-function-paren": [
