--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
     "tsconfigRootDir": "./"
   },
   "rules": {
+    "import/prefer-default-export": "off",
     "no-console": "off",
     "no-debugger": 1,
     // Possible errors
