--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "class-transformer": "^0.2.3",
     "csvtojson": "^2.0.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
