--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "csvtojson": "^2.0.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
