--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "typescript": "^3.5.1"
   },
   "dependencies": {
+    "@types/formidable": "^1.0.31",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "csvtojson": "^2.0.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "inversify": "^5.0.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
