--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev:debug": "nodemon -r dotenv/config --inspect-brk src/app.ts",
     "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix",
     "up": "docker-compose up",
-    "down": "docker-compose down"
+    "down": "docker-compose down",
+    "test": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,7 @@
     "@types/bluebird": "^3.5.27",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/jest": "^24.0.17",
     "@types/node": "^12.0.8",
     "@types/uuid": "^3.4.5",
     "@types/validator": "^10.11.1",
@@ -38,8 +41,10 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
   },
