--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,10 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "lib": ["es6", "dom"],
-    "types": ["reflect-metadata"],
+    "types": ["reflect-metadata", "jest"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/**/*.test.ts"]
 }
