Add unit tests to user service

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "up": "docker-compose up",
     "down": "docker-compose down",
     "test": "jest --watch",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "repository": {
     "type": "git",
