--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "tsc",
     "prod": "node -r dotenv/config dist/app.js",
     "serve": "run-s build up prod",
-    "start": "run-s \"up\" \"dev\"",
     "dev": "nodemon -r dotenv/config src/app.ts",
     "dev:debug": "nodemon -r dotenv/config --inspect-brk src/app.ts",
     "lint": "eslint --cache */**/*.{js,ts}  --ignore-path .gitignore --fix",
@@ -33,6 +32,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.17",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/node": "^12.0.8",
     "@types/uuid": "^3.4.5",
     "@types/validator": "^10.11.1",
@@ -59,6 +59,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "inversify": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "newman": "^4.5.4",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
